config/demo/blog-api/delivery.yml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: blog-api
  annotations:
    ootb.apps.tanzu.vmware.com/servicebinding-workload: "true"
    ootb.apps.tanzu.vmware.com/apidescriptor-ref: "true"
    kapp.k14s.io/change-rule: upsert after upserting servicebinding.io/ServiceBindings
  labels:
    apis.apps.tanzu.vmware.com/register-api: "true"
    app.kubernetes.io/part-of: blog-api
    apps.tanzu.vmware.com/auto-configure-actuators: "false"
    apps.tanzu.vmware.com/workload-type: web
    app.kubernetes.io/component: run
    carto.run/workload-name: blog-api
spec:
  template:
    metadata:
      annotations:
        boot.spring.io/version: 3.2.0-M1
        conventions.carto.run/applied-conventions: |-
          appliveview-sample/app-live-view-appflavour-check
          inspect-image-convention/buildpacks
          inspect-image-convention/base-image
          inspect-image-convention/run-image
          spring-boot-convention/auto-configure-actuators-check
          spring-boot-convention/spring-boot
          spring-boot-convention/spring-boot-graceful-shutdown
          spring-boot-convention/spring-boot-web
          spring-boot-convention/spring-boot-actuator
          spring-boot-convention/app-live-view-appflavour-check
          spring-boot-convention/app-live-view-connector-boot
          spring-boot-convention/app-live-view-appflavours-boot
          spring-boot-convention/app-live-view-appflavours-boot-native
          spring-boot-convention/service-intent-postgres
        developer.conventions/target-containers: workload
        inspect-image.buildpacks.io/base-image: |-
          reference: 6154ca4bc6e5fe3b2805b6b40d8f0e0488f9ca01d145abf9f9d8b5f014a0b05a
          top_layer: sha256:05baa3f43a65f4b739a7407f0c755b712e0a8f95027784bb5988ec12aaa189ca
        inspect-image.buildpacks.io/buildpacks: |-
          - id: paketo-buildpacks/ca-certificates
            version: 3.6.3
          - id: paketo-buildpacks/bellsoft-liberica
            version: 10.2.6
          - id: paketo-buildpacks/syft
            version: 1.32.1
          - id: paketo-buildpacks/executable-jar
            version: 6.7.4
          - id: paketo-buildpacks/spring-boot
            version: 5.26.1
          - id: paketo-buildpacks/native-image
            version: 5.12.1
        inspect-image.buildpacks.io/run-image: index.docker.io/paketobuildpacks/run:tiny-cnb
        prometheus.io/path: /actuator/prometheus
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
        services.conventions.carto.run/postgres: postgresql/
      labels:
        apis.apps.tanzu.vmware.com/register-api: "true"
        app.kubernetes.io/component: run
        app.kubernetes.io/part-of: blog-api
        apps.tanzu.vmware.com/auto-configure-actuators: "false"
        apps.tanzu.vmware.com/workload-type: web
        carto.run/workload-name: blog-api
        conventions.carto.run/framework: spring-boot
        services.conventions.carto.run/postgres: workload
        tanzu.app.live.view: "true"
        tanzu.app.live.view.application.actuator.path: actuator
        tanzu.app.live.view.application.actuator.port: "8080"
        tanzu.app.live.view.application.flavours: spring-boot_spring-native
        tanzu.app.live.view.application.name: blog-api
    spec:
      containers:
      - env:
        - name: DATABASE_URL
          valueFrom:
            secretKeyRef:
              key: DATABASE_URL
              name: blog-db
        - name: logging.level.io.opentelemetry.exporter.zipkin.ZipkinSpanExporter
          value: ERROR
        - name: JAVA_TOOL_OPTIONS
          value: -Dserver.port="8080" -Dserver.shutdown.grace-period="24s"
        image: ghcr.io/categolj/blog-api@sha256:fedd73b198ce0ca928431f032c85e1b2bf6da9bf2829f68c17a5e9a58fb3fd07
        name: workload
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        securityContext:
          runAsUser: 1000
      serviceAccountName: default
