config/demo/blog-api/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-api
  annotations:
    kubernetes.io/ingress.class: contour
    cert-manager.io/cluster-issuer: "letsencrypt"
    kapp.k14s.io/change-rule: "upsert after upserting Services"
  labels: 
    app.kubernetes.io/part-of: blog-api
    apps.tanzu.vmware.com/workload-type: server
    app.kubernetes.io/component: run
    carto.run/workload-name: blog-api
    
spec:
  tls:
    - secretName: blog-api-tls
      hosts:
      - blog-api.run.lime.maki.lol
  rules:
  - host: blog-api.run.lime.maki.lol
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: blog-api
            port:
              number: 8080
